--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.1.2",
     "@stream-io/node-sdk": "^0.4.18",
     "@stream-io/video-react-sdk": "^1.12.8",
@@ -18,6 +19,7 @@
     "convex": "^1.19.4",
     "lucide-react": "^0.477.0",
     "next": "14.2.23",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "svix": "^1.61.4",
