--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.2.6",
     "@stream-io/node-sdk": "^0.4.18",
     "@stream-io/video-react-sdk": "^1.12.8",
     "class-variance-authority": "^0.7.1",
