--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.6.0",
+    "react-resizable-panels": "^3.0.6",
     "svix": "^1.61.4",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
